--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     </div>
     <div class="text-container">
         <div class="big-text">I am Martha P. Katusiime</div>
-        <div class="small-text">Where creativity meets purpose – that’s where I thrive.</div>
-        <img class="profile-image" src="martha-removebg-preview.png" alt="Profile Image">
+        <div class="small-text">Where creativity meets purpose... that’s where I thrive.</div>
+        <img class="profile-image" src="marthaa-removebg-preview.png" alt="Profile Image">
     </div>
 
     <!-- Canvas for 3D scene -->
